#1949 fix: fix bug with the same position in rating